--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,19 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
+    <!-- header -->
+    <header class="header"></header>
+
+    <!-- main -->
+    <main>
+      <!-- section -->
+      <section class="section"></section>
+    </main>
+
+    <!-- footer -->
+    <footer class="footer"></footer>
+
+    <!-- includes -->
     <include src="./partials/example.html"></include>
   </body>
 </html>
